--- a/1. Git Demo Notebook.ipynb
+++ b/1. Git Demo Notebook.ipynb
@@ -18,7 +18,7 @@
    },
    "outputs": [],
    "source": [
-    "Print(\"Hello\")"
+    "print(\"Hello\")"
    ]
   }
  ],
@@ -35,7 +35,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "1. Git Demo Norebook",
+   "notebookName": "1. Git Demo Notebook",
    "widgets": {}
   },
   "language_info": {
